<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/slide_item_sign"
            android:title="@string/slide_sign" />
        <item
            android:id="@+id/slide_item_history"
            android:title="@string/slide_history" />
        <item
            android:id="@+id/slide_item_nearby_moments"
            android:title="@string/slide_nearby_moments" />
        <item
            android:id="@+id/slide_item_chat"
            android:title="@string/slide_chat" />
        <item
            android:id="@+id/slide_item_settings"
            android:title="@string/slide_settings" />
        <item
            android:id="@+id/slide_item_exit"
            android:title="@string/slide_exit" />
    </group>



    <!--
       <item android:title="Communicate">
           <menu>
               <item
                   android:id="@+id/nav_share"
                   android:icon="@drawable/ic_menu_share"
                   android:title="Share" />
               <item
                   android:id="@+id/nav_send"
                   android:icon="@drawable/ic_menu_send"
                   android:title="Send" />
           </menu>
       </item>
       -->
</menu>
